k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciyex-ehr-ui
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ciyex-ehr-ui
          image: registry.apps-prod.us-east.in.hinisoft.com/ciyex-ehr-ui:0.0.1
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
