k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-ehr-ui-ingress
spec:
  tls:
    - hosts:
        - app.ciyex.org
      secretName: ciyex-ehr-ui-prod-tls
  rules:
    - host: app.ciyex.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ciyex-ehr-ui-prod
                port:
                  number: 3000
